<resources>
    <string name="app_name">Bill Please</string>
    <string name="bill_amount">Bill Amount:</string>
    <string name="pax">Pax: </string>
    <string name="split_bill">Split Bill</string>
    <string name="reset">Reset</string>
    <string name="gst">GST</string>
    <string name="no_gst">No GST</string>
    <string name="srv_charge">Service Charge</string>
    <string name="no_srv_charge">No Service Charge</string>
    <string name="discount">Discount: </string>
</resources>
