<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bill_amount"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="25sp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/billEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pax"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="25sp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/paxEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:inputType="number"
            android:background="@drawable/edittext_bg"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/discount"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="25sp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/discEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:inputType="number"
            android:background="@drawable/edittext_bg" />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ToggleButton
            android:id="@+id/toggleButtonSrv"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:textOn="@string/srv_charge"
            android:textOff="@string/no_srv_charge"
            android:layout_marginLeft="30dp"/>

        <ToggleButton
            android:id="@+id/toggleButtonGst"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:textOn="@string/gst"
            android:textOff="@string/no_gst"
            android:layout_marginLeft="55dp"/>


    </LinearLayout>


    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/splitBtn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/split_bill"
            android:textAllCaps="false"
            android:background="@drawable/btn_bg"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="85dp"/>

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:background="@drawable/btn_bg"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="30dp" />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/totalBillnPaxTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="30sp"
        />

</LinearLayout>